# uw_matrix_multiplication

./: .gitignore  CMakeLists.txt  README.md  index.html
generator/: CMakeLists.txt  generator_main.cpp
include/: communicator.h  densematgen.h  matrix.h  matrixmul.h  parse.h  parser.h
src/: communicator.cpp  densematgen.cpp  main.cpp  matrix.cpp  matrix_multiplication.cpp  matrixmul.cpp  parse.cpp  parser.cpp
tests/: matrix01_00010_00042  matrix01_00010_00085  matrix01_00010_00291  matrix01_00010_00481  matrix01_00010_00572  matrix01_00010_01723  matrix01_00010_04715  matrix01_00010_08002  matrix01_00010_08412  matrix01_00010_08512  matrix01_00064_00042  matrix01_00064_00085  matrix01_00064_00291  matrix01_00064_00481  matrix01_00064_00572  matrix01_00064_01723  matrix01_00064_04715  matrix01_00064_08002  matrix01_00064_08412  matrix01_00064_08512  result_1_00010_000_00042  result_1_00010_001_00085  result_1_00010_002_00291  result_1_00010_003_00572  result_1_00010_004_00481  result_1_00010_005_08412  result_1_00010_006_08512  result_1_00010_007_08002  result_1_00010_008_01723  result_1_00010_009_04715  result_1_00064_000_00042  result_1_00064_001_00085  result_1_00064_002_00291  result_1_00064_003_00572  result_1_00064_004_00481  result_1_00064_005_08412  result_1_00064_006_08512  result_1_00064_007_08002  result_1_00064_008_01723  result_1_00064_009_04715  (+61 more)
